assets/kustomize/private-api/base/deploy.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: deploy-private-api

spec:
  replicas: 3

  selector:
    matchLabels:
      app: private-api
  template:
    metadata:
      name: private-api
      labels:
        app: private-api
        version: 2.0.1

    spec:
      containers:
      - name: private-api
        image: cachac/kubelabs_privateapi:2.0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 3002
          name: private-api
        - containerPort: 3082
          name: healthcheck
        resources:
          limits:
            cpu: 50m
            memory: 100Mi
          requests:
            cpu: 1m
            memory: 50Mi
        livenessProbe:
          httpGet:
            path: /healthcheck
            port: 3082
          initialDelaySeconds: 10
          periodSeconds: 30
          timeoutSeconds: 5
