assets/kustomize/private-api/base/vs.yaml
# https://istio.io/latest/docs/ops/best-practices/traffic-management/
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-private-api
  
spec:
  hosts:
    - svc-private-api.private.svc.cluster.local

  http:
    - route:
        - destination:
            host: svc-private-api.private.svc.cluster.local
            port:
              number: 3002

      # https://istio.io/latest/docs/concepts/traffic-management/
      timeout: 2s

      retries: # https://istio.io/latest/docs/concepts/traffic-management/#retries
        attempts: 3
        perTryTimeout: 2s
        retryOn: gateway-error,connect-failure,refused-stream

      # fault: # https://istio.io/latest/docs/tasks/traffic-management/fault-injection/
        # delay: # Currently, the fault injection configuration can not be combined with retry or timeout configuration on the same virtual service,
        #   percentage:
        #     value: 30
        #   fixedDelay: 5s

        # abort: # https://istio.io/latest/docs/tasks/traffic-management/fault-injection/#injecting-an-http-abort-fault
        #   httpStatus: 503
        #   percentage:
        #     value: 50
